--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 @import url('input-area.css');
+@import url('dashboard.css');
+@import url('navbar.css');
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +24,7 @@ body{
     justify-content: center;
     padding: 30px;
     position: relative;
-    top: 230px;
+    top: 180px;
     left: 0px;
 }
 
@@ -40,3 +42,4 @@ body{
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
