Adicionando animação fadeIn

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,3 +1,19 @@
+
+@keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+  }
+
+.container{
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
 .content{
     position: relative;
     top: 80px;
