--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import url('navbar.css');
 @import url('info-flags.css');
 @import url('media-queries.css');
+@import url('month-list.css');
 
 * {
     margin: 0;
