--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -53,6 +53,11 @@
     font-size: 3.2rem;
 }
 
+.dash-info a{
+    text-decoration: none;
+    color: mediumpurple;
+}
+
 .dash-details{
     border: 1px solid mediumpurple;
     box-shadow: 2px 2px 4px mediumpurple;
